chore: use vite

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>billiards-monitor</title>
+</head>
 <body>
-  <script src="./index.js"></script>
+  <script type="module" src="./src/index.ts"></script>
 </body>
 </html>
