refactor: split core/define/util

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>billiards-monitor</title>
 </head>
 <body>
-  <script type="module" src="./src/index.ts"></script>
+  <script type="module" src="./src/game.ts"></script>
 </body>
 </html>
